# optimap

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  run-minikube.sh  update-submodules.sh
backend/: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  data.json  pyproject.toml
backend/app/: config.py  exceptions.py  limiter.py  logger.py  main.py  scheduler.py
backend/app/api/dependency/: database.py  engine.py  mail.py  service.py
backend/app/api/router/: auth.py  logs.py  metrics.py  model.py  notifications.py  organization.py  root.py  users.py
backend/app/model/: __init__.py  base.py  blueprint.py  job.py  log.py  notification_preference.py  organization.py  permission.py  session.py  upload.py  user.py
backend/app/schema/: __init__.py  log.py  metric.py  model.py  notifications.py  organization.py  session.py  stream.py  upload.py  user.py
backend/app/schema/mapping/: blueprint.py  job.py  schema.py
backend/app/service/: base.py  log.py  metric.py  model.py  notification.py  organization.py  session.py  user.py
backend/app/service/mapping/: apply.py  blueprint.py  job.py  schema.py
backend/app/service/upload/: upload.py
backend/app/util/: jwt.py  mail.py  schema.py
backend/assets/: logo.base64
backend/assets/mails/templates/: combined_orgs_stats.html  forgot_password.html  job_complete.html  join_organization.html  join_organization_unregistered.html  verify_user.html
backend/database/alembic/: env.py
backend/database/alembic/versions/: 1b444a346180_rename_organization_models_to_model_ids.py  2cdb1b949271_merge_logs_and_execution_branches.py  4ca668be2fb5_original_revision.py  5bd4f34f0c2e_job_execution_completed_at_nullable.py  663c8cc84c5e_logs.py  81b2800397d3_added_email_to_invite.py  95524bf3effd_notification_settings.py  9e5f22d45b0e_tailored_model_merge.py  a6b59a888a1b_job_execution_attempts_and_original_.py  b964393f484f_dynamic_mapping_jobs.py  bead192ecc5e_cascade_delete_on_jobs_added_target_.py  d7c770d015a1_organization_branch_field.py
backend/test/: .env.example  conftest.py  generate_json.py  pytest.ini
backend/test/fixture/: config.py  data.py  mock.py
backend/test/router/: test_auth_routes.py  test_blueprint_routes.py  test_job_routes.py  test_log_routes.py  test_organization_routes.py  test_root.py  test_root_routes.py  test_schema_routes.py  test_user_routes.py
backend/test/service/: test_blueprint_service.py  test_limiter_service.py  test_log_service.py  test_mapping_jobs.py  test_organization_service.py  test_session_service.py  test_upload_service.py  test_user_service.py
backend/test/util/: test_jwt.py
engine/: .gitlab-ci.yml  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml
engine/app/: config.py  exceptions.py  main.py
engine/app/model/: model.py
engine/app/prompt_assets/: jsonata_reference.py
engine/app/router/: __init__.py  mapping.py  model.py
engine/app/schema/: mapping.py  model.py
engine/app/service/: db.py  llm_api.py  mapping.py  prompt_builder.py
engine/test/: .env.public  conftest.py  pytest.ini
engine/test/integration/: test_generate_mapping.py
engine/test/unit/: test_llm_api.py  test_model.py  test_prompt_builder_tmp.py
(+347 files in other folders)
